--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
     <script src="/js/app2.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
-          navigator.serviceWorker.register('/sw.js')
+          navigator.serviceWorker.register('/service-worker.js')
             .then(registration => {
-              console.log('Service Worker registered with scope:', registration.scope);
+              console.log('Service Worker registered with scopexxxxx:', registration.scope);
             })
             .catch(error => {
               console.log('Service Worker registration failed:', error);
